--- a/Docs/InstallGuide/SOURCE/getstart.tex
+++ b/Docs/InstallGuide/SOURCE/getstart.tex
@@ -21,7 +21,8 @@
 %% along with this program; if not, write to the Free Software
 %% Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 %%
-%% $Id: getstart.tex,v 0.12 1999/03/07 michael
+%% $Id: getstart.tex,v 0.20 1999/06/04 michael
+%% (Log is kept at end of this file)
 
 \documentclass[11pt,openany]{book}
 \usepackage{makeidx}
@@ -62,9 +63,9 @@
 %% Revision 0.01  1998/09/20  michael
 %% several extensions and corrections, added Fig.1.
 %% Revision 0.02  1998/09/29  michael
-%% added chapter takeoff from b buckel
+%% added Chapter takeoff from b buckel
 %% revision 0.10  1998/10/01  michael
-%% added chapter missed approach from b buckel
+%% added Chapter missed approach from b buckel
 %% inclusion file splitting
 %% final proofreading for release
 %% revision 0.11  1998/11/01 michael
@@ -74,3 +75,7 @@
 %% dropped .ps file
 %% working URLs in .html version
 %% corrected misspellings
+%% revision 0.20  1999/06/04  michael
+%% updated for fgfs 0.6
+%% added sections on menu and panel
+%% smaller and updated pix for faster download
