--- a/Docs/InstallGuide/SOURCE/title.tex
+++ b/Docs/InstallGuide/SOURCE/title.tex
@@ -21,7 +21,8 @@
 %% along with this program; if not, write to the Free Software
 %% Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 %%
-%% $Id: getstart.tex,v 0.12 1999/03/07 michael
+%% $Id: getstart.tex,v 0.20 1999/06/04 michael
+%% (Log is kept at end of this file)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{FlightGear Flight Simulator -- Installation and Getting Started}
@@ -33,10 +34,10 @@
  (\mail{buckel@wmad95.mathematik.uni-wuerzburg.de})\\
 { \setlength{\fboxsep}{12mm}\setlength{\fboxrule}{0pt}
  \fbox{
-\includegraphics[clip,width=8.0cm]{start.eps}
+\includegraphics[clip,width=10.0cm]{start.eps}
  }}}
 
-\date{March 7, 1999}
+\date{June 4, 1999}
 
 \maketitle
 
