--- a/Docs/InstallGuide/SOURCE/building.tex
+++ b/Docs/InstallGuide/SOURCE/building.tex
@@ -21,7 +21,8 @@
 %% along with this program; if not, write to the Free Software
 %% Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 %%
-%% $Id: getstart.tex,v 0.12 1999/03/07 michael
+%% $Id: getstart.tex,v 0.20 1999/06/04 michael
+%% (Log is kept at end of this file)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Building the plane: Compiling\index{compiling} the program\label{building}}
@@ -29,14 +30,14 @@
 \markboth{\thechapter.\hspace*{1mm} BUILDING THE
 PLANE}{\thesection\hspace*{1mm} COMPILING UNDER LINUX}
 
-This major chapter describes how to build \FlightGear on several systems. In case you are
-on a Win32 (i.\,e. Windows 98 or Windows NT) platform you may not want to go though that
-potentially troublesome process but instead skip that chapter and straightly go to the
-next one. (Not everyone wants to build his or her plane himself or herself, right?)
+This central Chapter describes how to build \FlightGear on several systems. In case you
+are on a Win32 (i.\,e. Windows 98 or Windows NT) platform you may not want to go though
+that potentially troublesome process but instead skip that Chapter and straightly go to
+the next one. (Not everyone wants to build his or her plane himself or herself, right?)
 However, there may be good reason at least to try building the simulator:
 
 \begin{itemize}
-\item In case you are on a \Index{UNIX}/\Index{Linux} platform there may be no
+\item In case you are on a \Index{UNIX}/\Index{Linux} platform there are supposedly no
 pre-compiled binaries\index{binaries, pre-compiled} available for your system. We do not
 see any reason why the distribution of pre-compiled binaries (with statically linked
 libraries) should not be possible for \Index{UNIX} systems in principle as well, but in
@@ -53,7 +54,11 @@ Started} and should be included in a future
 \item You may be proud you did.
 \end{itemize}
 
-As you will note, this chapter is far from being complete. Basically, we describe
+On the other hand, compiling \FlightGear is not a task for novice users. Thus, if you're
+a beginner (we all were once) we recommend postponing this and just starting with the
+binary distribution to get you flying.
+
+As you will note, this Chapter is far from being complete. Basically, we describe
 compiling for two operating systems only, \Index{Windows 98/NT} and \Index{Linux}. There
 is a simple explanation for this: These are just the systems we are working on. We hope
 to be able to provide descriptions for more systems based on contributions written by
@@ -69,7 +74,7 @@ If you are running Linux you probably have to build your own
 \item Get the file \texttt{FlightGear-x.xx.tar.gz} from the
 \texttt{source} subdirectory under
 
- \web{http://www.flightgear.org/Downloads/}
+ \web{ftp://ftp.flightgear.org/pub/fgfs/Source/}
 
  \noindent
 
@@ -123,55 +128,36 @@ website if you run a 3Dfx board.
 \section{Compiling\index{compiling!Windows 98/NT} under \Index{Windows 98/NT}}
 
 \begin{enumerate}
-\item Contrary to Linux which brings its own compiler Windows comes
+\item Windows, contrary to Linux which brings its own compiler, comes
 not equipped with developmental tools. Several compilers have been shown to work for
 compiling {\FlightGear}, including the \Index{Cygnus Win32 port of GNU C}++ and the
-\Index{MS Visual C5} compiler. Given that the project will be a free one we prefer the
+\Index{MS Visual C} compiler. Given that the project will be a free one we prefer the
 Cygnus Compiler as it provides a free development environment. However, we will be happy
 to include a proper description in case those who worked out how to compile with MSVC or
-other Compilers provide one to us.
+other Compilers provide one.
 
 \item  Install and configure the \Index{Cygnus} Gnu-Win32 development
     environment. The latest version is Beta 20. The main
     Cygnus Gnu-Win32 page is at:
 
-        \web{http://www.cygnus.com/misc/gnu-win32/}.
+        \web{http://sourceware.cygnus.com/cygwin/}.
 
  \noindent
-    You can download the Cygnus Gnu-Win32 compiler from:
+    You can download the complete Cygnus Gnu-Win32 compiler from:
 
-        \web{ftp://ftp.cygnus.com/pub/gnu-win32/latest/cdk.exe}.
+        \web{ftp://go.cygnus.com/pub/sourceware.cygnus.com/cygwin/latest/full.exe}.
 
- \noindent
-    To install it, just run the file \texttt{cdk.exe} by double-clicking in
-    Windows explorer. Be sure to read this package's README :
-
-        \web{http://www.cygnus.com/misc/gnu-win32/readme\_toc.html}.
+    Be sure to read this package's README files to be found under the main page, first.
 
  \noindent
-    Next, you need several UNIX developmental tools, being compiled for
-    Windows 98/NT. These are bundled in the package \texttt{usertools}. Get it
-    from
+    To install the compiler, just run \texttt{full.exe} by double-clicking in
+    Windows explorer.  After doing so you'll find a program group called
+    \texttt{Cygnus Solutions} in your Start menu. Do not forget making a copy of the
+    shell under c:/bin, as detailed in the docs.
 
-    \web{ftp://ftp.cygnus.com/pub/gnu-win32/latest/usertools.exe}
-
- \noindent
-    and install it by double-clicking as well. After doing so you should
-    find a program group called \texttt{Cygnus Solutions} in your start menu.
-
-\item  Compiling \FlightGear requires you to install the \Index{EGCS}
-upgrade to the \Index{Cygnus} environment being available from:
-
-\href{http://www.xraylith.wisc.edu/~khan/software/gnu-win32/egcs.html}{http://www.xraylith.wisc.edu/\~{}khan/software/gnu-win32/egcs.html}
-
-
- \noindent
-    Again, make sure you follow the directions. It is recommended that you unroll the
-    \Index{EGCS} stuff over top of your Cygwin32 installation.  It will replace many of
-    the files.
-
-\item  Open the Cygnus bash via its entry in the Start menu.
-    Mount the drive as follows (assuming your \FlightGear drive is \texttt{d:}):
+\item  Open the Cygnus shell via its entry in the Start menu.
+    Mount the drive where you want to build \FlightGear as follows
+    (assuming your \FlightGear drive is \texttt{d:}):
 
          \texttt{mkdir /mnt}\\
          \texttt{mount d: /mnt}
@@ -181,29 +167,106 @@ upgrade to the \Index{Cygnus} environment being available from:
     umount it) even through reboots and switching off the machine.
 
 
-\item  Fetch the Flight Gear code and special \Index{Win32 libraries}.  These
-can  be found at:
+\item Before actually being able to compile \FlightGear you have to install a hand full
+of support libraries required for building the simulator itself. Those go usually into
+\texttt{c:/usr/local} and it is highly recommended to choose just that place.
+
+ First, you have to install the free \Index{win32 api library} (the latest
+ version being 0.1.5). Get the package \texttt{win32api-0.1.5.tar.gz} from:
+
+    \web{http://www.acc.umu.se/~anorland/gnu-win32/w32api.html}
+
+Conveniently you may unpack the package just onto you \FlightGear drive. Copy the file to
+the named drive, open the Cygnus shell via the Start menu entry and change to the
+previously mounted drive with
+
+ \texttt{cd /mnt}
+
+ Now, you can unpack the distribution with
+
+ \texttt{gzip -d win32api-0.1.5.tar.gz}\\
+ \texttt{tar xvf win32api-0.1.5.tar}
+
+ This provides you with a directory containing the named libraries. For installing them,
+ change to that directory with
+
+\texttt{cd win32api-0.1.5}
+
+and type
+
+ \texttt{make}\\
+ \texttt{make install}
+
+This installs the libraries to their default locations under \texttt{c:/usr/local}
+
+\item To proceed, you need the \Index{glut libraries}. Get these from the same site named
+above
+
+\web{http://www.acc.umu.se/~anorland/gnu-win32/w32api.html}
+
+as \texttt{glutlibs-3.7beta.tar.gz}. Just copy the package to your \FlightGear drive and
+unpack it in the same way as describes above. There is no need to run \texttt{make} here.
+Instead, just copy the two libraries \texttt{libglut.a} and \texttt{libglut32.a} to
+\texttt{c:/usr/local/lib}. There is no need for the two accompanying \texttt{*.def} files
+here.
+
+\item Next, get the \Index{Glut header files}, for instance, from
+
+\web{ftp:://ftp.flightgear.org/pub/fgfs/Win32/Mesa-3.0-includes.zip}
+
+Unpack these as usual with \texttt{unzip -d} and copy the contents of the resulting
+directory \texttt{/gl} to \texttt{c:/usr/local/include/gl}
+
+\item Finally, you need Steve Backer's \Index{PLIB} being one of the key libraries for \FlightGear\hspace{-1mm}.
+Get the most recent version \texttt{plib-X.X.tar.gz} from
+
+\web{http://www.woodsoup.org/projs/plib/}
+
+(There are mirrors, but make sure they contain the most recent version!). Copy it to your
+\FlightGear drive, open the Cygnus shell and unpack the library as described above.
+
+Next, change into \Index{PLIB}'s directory. It is recommended to configure \Index{PLIB}
+with the following command line (you can make a script as I did if it hurts)
+
+\begin{ttfamily}
+CFLAGS="-O2 -Wall" CXXFLAGS="-O2 -Wall"\\ CPPFLAGS=-I/usr/local/include
+LDFLAGS=-L/usr/local/lib ./configure
+--prefix=/usr/local\\
+ --includedir=/usr/local/include/plib
+\end{ttfamily}
+
+You must write all this \textbf{on one line} without any line breaks in between!
+
+Finally, build \Index{PLIB} with
+
+ \texttt{make}\\
+ \texttt{make install}
+
+\item Now, you're finally prepared to build \FlightGear itself.
+
+ Fetch the \FlightGear code and special \Index{Win32 libraries}.  These
+can be found at:
 
 
- \web{http://www.flightgear.org/Downloads/Source}
+ \web{ftp://ftp.flightgear.org/pub/fgfs/Source/}
 
  \noindent
     Grab the latest \texttt{FlightGear-X.XX.zip} and
     \texttt{win32-libs-X.XX.zip} files.
+
+(It you're really into adventures, you can try one of the recent snapshots instead.)
 
 \item Unpack the \FlightGear source code via
 
         \texttt{pkunzip -d FlightGear-X.XX.zip}.
 
  \noindent
-    (Be sure to use the -d option.  This will create all the needed
-    subdirectories.  Otherwise you will have one big mess!)
 
 \item  Change to the newly created \texttt{FlightGear-X.XX directory} with e.\,g.
 
 \texttt{cd //D/FlightGear-X.XX}
 
- and unpack the Win32 libraries:
+ and unpack the Win32 libraries there:
 
      \texttt{pkunzip -d win32-libs-X.XX.zip}.
 
@@ -227,12 +290,12 @@ the \texttt{install tree}.  This is where the executables, the
 scenery, the textures, and any other run-time files will be
 located.
 
-\item Configure the make system for your environment and your
+\item \Index{Configure} the make system for your environment and your
 \texttt{install tree}. Tell the configure script where you would like to install the
 \Index{binaries} and all the \Index{scenery} and \Index{textures} by using the
 \texttt{-$\!$-prefix} option. In the following example the base of the \texttt{install
-tree} is \texttt{FlightGear}. Make your you are within \FlightGear's root directory or
-change to it.
+tree} is \texttt{FlightGear}. Make sure you are within \FlightGear's \texttt{build tree}
+root directory.
 
 \item Run:\index{configure}
 
@@ -241,7 +304,7 @@ change to it.
  \noindent
 Side note: The make procedure is designed to link against opengl32.dll, glu32.dll, and
 glut32.dll which most accelerated boards require. If this does not apply to yours or if
-you installed SGI's \Index{software rendering} as mentioned in subsection \ref{softrend}
+you installed SGI's \Index{software rendering} as mentioned in Subsection \ref{softrend}
 you may have to change these to opengl.dll, glu.dll, and glut.dll. (In case you're in
 doubt check your \texttt{$\backslash$windows$\backslash$system} directory what you've
 got.)
@@ -255,9 +318,8 @@ got.)
 
         \texttt{make}.
 
-\item Assuming you have installed the updated version of
-\texttt{install.exe} (see earlier instructions) you can now create
-and populate the install tree.  Run:
+Assuming you have installed the updated version of \texttt{install.exe} (see earlier
+instructions) you can now create and populate the \texttt{install tree}.  Run:
 
         \texttt{make install}.
 
@@ -279,6 +341,8 @@ and populate the install tree.  Run:
 %% revision 0.10  1998/10/01  michael
 %% final proofreading for release
 %% revision 0.11  1998/11/01  michael
-%% deleted some obsolete stuff from the Linux section
+%% deleted some obsolete stuff from the Linux Section
 %% revision 0.12  1999/03/07  michael
 %% changed Windows to Cygnus b20
+%% revision 0.20  1999/06/04  michael
+%% complete rewrite of the windows build Section exploiting Curt's README.win32
